--- a/src/Comp/style.css
+++ b/src/Comp/style.css
@@ -1,62 +1,71 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    margin: 10px;
-  }
-  
-  .nav-items > ul {
-    list-style-type: none;
-    display: flex;
-    font-size: 20px;
-
-  }
-  
-  .nav-items > ul li {
-    padding: 10px;
-  }
-  
-  .logo {
-    margin: 10px;
-    width: 250px;
-    padding: 10px;
-  }
-
-
-h1{
-    font-style: italic;
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
 }
 
-.restaurantList{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.nav-items > ul {
+  list-style-type: none;
+  display: flex;
+  font-size: 20px;
 }
 
+.nav-items > ul li {
+  padding: 10px;
+}
 
+.logo {
+  margin: 10px;
+  width: 250px;
+  padding: 10px;
+}
+
+h1 {
+  font-style: italic;
+}
+
+.restaurantList {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 
 .card {
-    width: 300px;
-    height: 400px;
-    border: 2px solid black;
-    padding: 5px;
-    margin: 30px;
-  }
+  width: 300px;
+  height: 400px;
+  border: 2px solid black;
+  padding: 5px;
+  margin: 30px;
+}
 
-  .card-details {
-    height: 380px;
-    margin: 10px;
-  }
-  
-  .card-details > img {
-    width: 100%;
-  }
-  .card-details > h2 {
-    margin-left: 5px;
-  }
-  .card-details > h3 {
-    margin-left: 5px;
-  }
-  .card-details > h4 {
-    margin-left: 5px;
-  }
+.card-details {
+  height: 380px;
+  margin: 10px;
+}
 
+.card-details > img {
+  width: 100%;
+}
+.card-details > h2 {
+  margin-left: 5px;
+}
+.card-details > h3 {
+  margin-left: 5px;
+}
+.card-details > h4 {
+  margin-left: 5px;
+}
+
+.search-container {
+  width: 280px;
+  margin-left: 30px;
+  justify-content: space-between;
+  display: flex;
+}
+
+.search-btn {
+  height: 30px;
+  width: 60px;
+  background-color: black;
+  color: white;
+}
